# HodEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  HodEngine.sln  ImGui.ini  README.md  TODO.txt  TutoOpenGL.sln  WORKSPACE  WORKSPACE.bazel  build_android_arm64.bat  build_android_x64.bat  build_windows_arm64.bat  build_windows_x64.bat  generate_submodule_projects.bat  installLinuxPackage.sh
HodEngine/: Actor.cpp  Actor.h  Application.cpp  Application.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  Color.h  Component.cpp  D3d12GpuDevice.h  D3dShader.cpp  D3dShader.h  DebugLine.cpp  DebugLine.h  DebugMesh.cpp  DebugMesh.h  Error.cpp  Error.h  FragmentShader.cpp  FragmentShader.h  FreeCam.cpp  FreeCam.h  GpuDevice.h  GpuDeviceHelper.cpp  GpuDeviceHelper.h  GpuHelper.cpp  GpuHelper.h  GraphicsSettings.h  HodEngine.vcxproj  HodEngine.vcxproj.filters  InputListener.cpp  InputListener.h  LightComponent.cpp  Line_3P_3C.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialManager.cpp  (+41 more)
HodEngine-Editor/: CMakeLists.txt  setup - Classic.bat
HodEngine-Editor/Src/: ApplicationDescription.cpp  ApplicationDescription.h  ContentDatabase.cpp  ContentDatabase.h  ContentDatabase.inl  Mainwindow.inl  Project.cpp  Project.h  Project.inl  Signal.h  Signal.inl  Singleton.h  Singleton.inl  UID.cpp  UID.h  UID.inl  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
HodEngine-Editor/Src/Contents/: Content.cpp  Content.h  Content.inl  ContentFactory.cpp  ContentFactory.h  Hash.h  SceneContent.cpp  SceneContent.h  TextureContent.cpp  TextureContent.h
HodEngine-Editor/Src/Dialog/: NewProjectDialog.cpp  NewProjectDialog.h  NewProjectDialog.ui
HodEngine-Editor/Src/DockableWindow/: Contents.cpp  Contents.h  Contents.ui  DockableWindow.cpp  DockableWindow.h  HODContentStandardItem.cpp  HODContentStandardItem.h  HODDirectoryStandardItem.cpp  HODDirectoryStandardItem.h  HODStandardItem.cpp  HODStandardItem.h  Viewport.cpp  Viewport.h  Viewport.ui  ViewportWindow.cpp  ViewportWindow.h  ViewportWindow.ui
HodEngine-Editor/Src/Widgets/: Collaspsable.cpp  Collaspsable.h  Property.cpp  Property.h  PropertyFloat32.cpp  PropertyFloat32.h  PropertyVector2f32.cpp  PropertyVector2f32.h
HodEngine/Application/: CMakeLists.txt
HodEngine/Application/src/: Application.cpp  Application.h  ScreenHelper.cpp  ScreenHelper.h  VideoSettings.h
HodEngine/Core/: CMakeLists.txt
HodEngine/Core/Src/: ArgumentParser.cpp  ArgumentParser.h  Color.cpp  Color.h  Content.cpp  Content.h  Content.inl  GenericManager.h  GenericManager.inl  Hash.cpp  Hash.h  Output.cpp  Rect.h  ReflectionDescriptor.cpp  ReflectionDescriptor.h  ReflectionMacros.h  ReflectionProperty.cpp  ReflectionProperty.h  ReflectionProperty.inl  ReflectionTrait.h  Signal.h  Signal.inl  Singleton.h  Singleton.inl  StringConversion.inl  Type.h  UID.cpp  UID.inl
HodEngine/DebugLayer/: CMakeLists.txt
HodEngine/DebugLayer/src/: DebugLayer.cpp  DebugLayer.h  DebugWindow.cpp  DebugWindow.h
HodEngine/Game/: CMakeLists.txt
HodEngine/Game/src/: Actor.cpp  Actor.h  ActorReflection.cpp  ActorReflection.h  Builtin.cpp  Component.cpp  Component.h  Component.inl  ComponentReflection.cpp  ComponentReflection.h  ComponentReflection.inl  Game.cpp  (+9 more)
HodEngine/ImGui/: CMakeLists.txt
HodEngine/Mesh/: sphere.fbx
HodEngine/Physic/: CMakeLists.txt
HodEngine/Physics/: CMakeLists.txt
HodEngine/Renderer/: CMakeLists.txt
HodEngine/Shader/: CompileAll.bat  Hdri.frag  Hdri.frag.spirv  Hdri.vert  Hdri.vert.spirv  Lit.frag  Lit.frag.spirv  Lit.frag.spv  Lit.vert  Lit.vert.spirv  Lit.vert.spv  LitNormal.frag  LitNormal.vert  LitSpecular.frag  LitSpecular.frag.spirv  LitSpecular.vert  LitSpecular.vert.spirv  LitSpecularNormal.frag  LitSpecularNormal.frag.spirv  LitSpecularNormal.vert  LitSpecularNormal.vert.spirv  Unlit.frag  Unlit.vert  UnlitColor.frag  UnlitColor.vert  UnlitTexture.frag  UnlitVertexColor.frag  UnlitVertexColor.frag.spirv  UnlitVertexColor.frag.vulk  UnlitVertexColor.vert  UnlitVertexColor.vert.spirv  UnlitVertexColor.vert.vulk
HodEngine/SourcesForBigC/: BigC_1.C
HodEngine/SourcesForBigCPP/: BigCPP_1.CPP  BigCPP_2.CPP
HodEngine/src/: Actor.cpp  Actor.h  AllocationTracker.cpp  AllocationTracker.hpp  Allocator.cpp  Application.cpp  Application.h  CameraComponent.cpp  ColliderComponent.cpp  Color.cpp  Color.h  Component.h  DebugMesh.cpp  FreeCam.cpp  FreeCam.h  InputListener.cpp  InputListener.h  LightComponent.h  Line_3P_3C.h  RenderQueue.cpp  RenderQueueHelper.cpp  Renderer.cpp  RendererVulkan.cpp  RendererVulkan.h  Scene.cpp  Scene.hpp  SceneComponent.cpp  ScreenHelper.cpp  ScreenHelper.h  Singleton.h  Singleton.inl  Texture.h  Tri_3P_3C.h  VkGpuDevice.h  VkMaterial.h  VkMaterialInstance.h  VkShader.h  VkTexture.h  main.cpp
HodEngine/vcxProjGenerator/: vcxProjGenerator.sln
Sources/EditorApplication/: BUILD  BUILD.bazel  CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  EditorApplication.hpp  Main.cpp
Sources/GameApplication/: BUILD.bazel  CMakeLists.txt  GameApplication.cpp  GameApplication.h  GameApplication.hpp  Main.cpp
Sources/HodApplication/: AutoRotateComponent.cpp  AutoRotateComponent.hpp  CMakeLists.txt  HodApplication.cpp  HodApplication.hpp  Main.android.cpp  Main.cpp  Main.hpp  Main.swift  module.modulemap
Sources/HodEditor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.hpp  HodEditor.cpp  HodEditor.hpp  Main.cpp  Main.hpp  icon.icns
Sources/HodEngine/: BUILD  BUILD.bazel  CMakeLists.txt  HodEngine.cpp  HodEngine.hpp
Sources/HodShaderConverter/: ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  Converter.cpp  Converter.h  Converter.hpp  ConverterGLSL.cpp  ConverterGLSL.h  ConverterGLSL.hpp  ConverterHLSL.cpp  ConverterHLSL.h  ConverterHLSL.hpp  ConverterMetal.cpp  ConverterMetal.hpp  Lexer.cpp  Lexer.h  Main.cpp  Target.hpp  Token.cpp  Token.h  TokenReader.cpp  TokenReader.h  TokenReader.hpp  TokenWritter.cpp  TokenWritter.h  TokenWritter.hpp
Sources/Pong/: CMakeLists.txt  Main.cpp
(+2286 files in other folders)
