#load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#http_archive(
#	name = "rapidjson",
#	url = "https://github.com/Tencent/rapidjson/archive/refs/heads/master.zip",
#	build_file = "SDK/BUILD.rapidjson",
#)
#
#http_archive(
#	name = "glm",
#	url = "https://github.com/g-truc/glm/archive/refs/tags/0.9.9.8.zip",
#	build_file = "SDK/BUILD.glm",
#)
#
#http_archive(
#	name = "stb",
#	url = "https://github.com/nothings/stb/archive/refs/heads/master.zip",
#	build_file = "SDK/BUILD.stb",
#)
#

new_local_repository(
    name = "rapidjson",
    path = "SDK/rapidjson",
    build_file = "SDK/BUILD.rapidjson",
)

new_local_repository(
    name = "glm",
    path = "SDK/glm",
    build_file = "SDK/BUILD.glm",
)

new_local_repository(
    name = "stb",
    path = "SDK/stb",
    build_file = "SDK/BUILD.stb",
)

new_local_repository(
    name = "vulkan",
    path = "C:\\VulkanSDK\\1.3.243.0\\",
    build_file = "SDK/BUILD.vulkan",
)
